[package]
name = "egui_stego_wav"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version="3.2.25", features = ["derive"]}
hound = "3.4.0"
klask = "1.0.0"
reqwest = { version = "0.11.17", features = ["blocking", "json","multipart"] }
serde_json = "1.0.96"
rand = "0.8.5"